--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
     <!-- Declare Vulkan feature requirement but don't mandate it -->
     <uses-feature android:name="android.hardware.vulkan.version" android:required="false" android:version="0x400003" />
     <uses-feature android:name="android.hardware.vulkan.level" android:required="false" android:version="0" />
-
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera.any" />
+    
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
